--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,12 +120,16 @@ input, select, textarea {
 /* Type */
 
 	body {
-		background-color: #935d8c;
-		color: rgba(255, 255, 255, 0.65);
+		background: none; 
 	}
 
+	@font-face {
+		font-family: 'p_hand';
+		src: url('PatrickHand-Regular.ttf');
+	  }
+
 	body, input, select, textarea {
-		font-family: "PatrickHand";
+		font-family: "p_hand", Helvetica, sans-serif;
 		font-size: 17pt;
 		font-weight: 300;
 		line-height: 1.65;
@@ -2432,6 +2436,19 @@ input, select, textarea {
 		padding-left: 1em;
 	}
 
+	ul {
+		margin-top: 0; 
+		padding-top: 0; 
+	}
+
+	ul li {
+		margin-top: 3px;
+	}
+	
+	p {
+		margin-bottom: 0;
+	}
+
 		ul li {
 			padding-left: 0.5em;
 		}
@@ -2442,10 +2459,10 @@ input, select, textarea {
 		}
 
 			ul.alt li {
-				border-top: solid 1px;
-				padding: 0.5em 0;
+				border-top: solid 0px;
+				padding: 0px;
 			}
-
+ 
 				ul.alt li:first-child {
 					border-top: 0;
 					padding-top: 0;
@@ -3072,7 +3089,7 @@ input, select, textarea {
 /* Header */
 
 	#header {
-		padding: 5em 5em 1em 5em ;
+		padding: 0em 5em 1em 5em ;
 		text-align: center;
 	}
 
@@ -3218,8 +3235,8 @@ input, select, textarea {
 		background-color: #ffffff;
 		color: #636363;
 		position: absolute;
-		width: 64em;
-		max-width: calc(100% - 4em);
+		width: 100%;
+		max-width: calc(100%);
 		padding: 1em;
 		background-color: #f7f7f7;
 		border-top-left-radius: 0.25em;
@@ -3581,7 +3598,7 @@ input, select, textarea {
 		}
 
 		#main > .main {
-			padding: 5em 5em 3em 5em ;
+			padding: 2em 10em 0em 10em ;
 			border-top: solid 1px #dddddd;
 		}
 
@@ -3762,11 +3779,12 @@ input, select, textarea {
 
 /* Wrapper */
 
-	#wrapper {
-		width: 64em;
-		max-width: calc(100% - 4em);
-		margin: 0 auto;
-	}
+		#wrapper {
+			width: 100%;  /* Full page width */
+			max-width: 100%; 
+			margin: 0;
+		}
+
 
 		@media screen and (max-width: 480px) {
 
