--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2660,7 +2660,7 @@ input, select, textarea {
 	}
 
 		header.major h2 {
-			font-size: 2em;
+			font-size: 1.6em;
 		}
 
 			header.major h2:after {
@@ -3283,7 +3283,7 @@ input, select, textarea {
 		#nav ul {
 			margin: 0;
 			padding: 0;
-			list-style: none;
+			font-size: 15pt;
 		}
 
 			#nav ul li {
