--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,6 +33,10 @@ body {
 	line-height: 1;
 }
 
+figcaption{
+	font-size: 15px;
+}
+
 ol, ul {
 	list-style: none;
 }
@@ -217,10 +221,13 @@ input, select, textarea {
 
 	h2 {
 		font-size: 1.5em;
+		text-align: left;
+
 	}
 
 	h3 {
 		font-size: 1.25em;
+		text-align: left;
 	}
 
 	h4 {
@@ -2411,7 +2418,7 @@ input, select, textarea {
 
 		.image.main {
 			display: block;
-			margin: 0 0 3em 0;
+			margin: 0 0 0 0;
 			width: 100%;
 		}
 
@@ -2656,7 +2663,7 @@ input, select, textarea {
 	}
 
 	header.major {
-		margin-bottom: 3em;
+		margin-bottom: 0;
 	}
 
 		header.major h2 {
@@ -2668,12 +2675,12 @@ input, select, textarea {
 				content: '';
 				width: 3.25em;
 				height: 2px;
-				margin: 0.7em 0 1em 0;
+				margin: 0.7em 0 0em 0;
 				border-radius: 2px;
 			}
 
 				section.special header.major h2:after, article.special header.major h2:after {
-					margin-left: auto;
+					margin-left: 0;
 					margin-right: auto;
 				}
 
@@ -2692,7 +2699,7 @@ input, select, textarea {
 			}
 
 	footer.major {
-		margin-top: 3em;
+		margin-top: 0em;
 	}
 
 	@media screen and (max-width: 736px) {
@@ -2998,23 +3005,27 @@ input, select, textarea {
 		-webkit-align-items: center;
 		-ms-align-items: center;
 		align-items: center;
-		margin: 0 0 2em 0;
+		margin: 0 0 5px 0;
 	}
 
-		.spotlight .content {
-			-moz-flex: 1;
-			-webkit-flex: 1;
-			-ms-flex: 1;
-			flex: 1;
+	.spotlight .content {
+		-moz-flex: 1;
+		-webkit-flex: 1;
+		-ms-flex: 1;
+		flex: 1;
+	}
+
+	.spotlight .p {
+		display: flex;
+	}
+
+		.spotlight .content > :last-child {
+			margin-bottom: 0;
 		}
 
-			.spotlight .content > :last-child {
-				margin-bottom: 0;
-			}
-
-			.spotlight .content header.major {
-				margin: 0 0 2em 0;
-			}
+		.spotlight .content header.major {
+			margin: 0 0 2em 0;
+		}
 
 		.spotlight .image {
 			display: inline-block;
@@ -3029,6 +3040,20 @@ input, select, textarea {
 				border-radius: 100%;
 				width: 16em;
 			}
+
+			.spotlight .image-lg img {
+				display: block;
+				/* border-radius: 100%; */
+				width: 24em;
+			}
+			
+			.spotlight .images {
+				display: flex;
+				justify-content: space-between;
+				gap: 20px;
+			}
+
+			
 
 		@media screen and (max-width: 980px) {
 
@@ -3087,7 +3112,15 @@ input, select, textarea {
 	.spotlight .image {
 		border-color: rgba(255, 255, 255, 0.35);
 	}
+	
+	.spotlight p{
+		text-align: left;
+	}
 
+	.spotlight h3{
+		text-align: left;
+		margin-bottom: 10em;
+	}
 /* Header */
 
 	#header {
@@ -3711,7 +3744,7 @@ input, select, textarea {
 		flex-wrap: wrap;
 		padding: 5em 5em 3em 5em ;
 		width: calc(100% + 2em);
-		margin: 0 0 3em -2em;
+		margin: 0 0 0em 0em;
 	}
 
 		#footer > * {
@@ -3721,7 +3754,7 @@ input, select, textarea {
 
 		#footer .copyright {
 			width: 100%;
-			margin: 2.5em 0 2em 0;
+			margin: 0em 0 0em 0;
 			font-size: 0.8em;
 			text-align: center;
 		}
